testsuite/tests/ghc-regress/rename/should_fail/rnfail033.hs
-- !!! check that hiding on an unqualified import also hides the qualified name
module ShouldFail ( List.map ) where
import List hiding ( map )
